                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.5.4

  *) Windows cmake build: Fix an incompatiblity with Visual Studio
     generators.  [Jeff Trawick, Bert Huijben]

  *) Fix detection of Berkeley DB 6.0. PR 55277.
     [Lars Wendler <polynomial-c gentoo.org>]

Changes with APR-util 1.5.3

  *) Cygwin: Use correct file extension when loading APR DSOs.  PR 55587.
     [Carlo Bramini <carlo.bramix libero.it>]

  *) Add experimental cmake-based build system for Windows.  Refer to
     README.cmake for more information.  [Jeff Trawick, Tom Donovan]

  *) Fix warnings in odbc driver on 64bit systems.
     PR 55197  [Tom Donovan]

  *) Add support to apr_memcache for unix domain sockets. PR 54573 [Remi
     Gacogne <rgacogne+asf aquaray.com>]

  *) Add support for Berkeley DB 6.0. [Rainer Jung]

  *) Improve platform detection for bundled expat by updating
     config.guess and config.sub. [Rainer Jung]

Changes with APR-util 1.5.2

  *) Windows: Add command line makefiles. [Gregg Smith]

  *) apr_uri_parse(): Do not accept invalid characters in the scheme.
     Per RFC 3986 3.3, enforce that the first segment of a relative path does
     not contain a colon. PR 52479. [Stefan Fritsch]

  *) Fix memory leak in hook sorting function. PR 51256.
     [<horowity checkpoint com>]

  *) Speedup md5 calculation by avoiding some copying on little endian
     architectures. PR 49011. [Stefan Fritsch, Stefan Fuhrmann
     <stefanfuhrmann alice-dsl de>]

  *) Use heap memory for crypt in apr_password_validate(), to reduce stack
     usage. PR 54572. [Stefan Fritsch]

  *) Fix password validation failure for all crypt and crypt_r based
     algorithms. PR 54603.  [Harvey Eneman <harvey.eneman oracle.com>]

  *) Fix syntax error in crypto/apr_passwd.c on non-glibc systems. PR 54275.
     [Stefan Fritsch]

  *) Fix potential data corruption in apr_brigade_write() and friends if